# Contours2Bezier

./: CMakeLists.txt  LICENSE  README.md  README_EN.md  main.cpp
images/: srcImage.tif
include/: smooth_contours.hpp
result/: bezier_contours.tif  smooth_contours.tif  source_contours.tif
